--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chai": "^4.2.0",
     "chai-date-string": "^0.1.0",
     "chai-http": "^4.2.1",
+    "lerna": "^3.13.2",
     "mocha": "^6.1.2",
     "mongo-mock": "^3.4.0",
     "sinon": "^7.3.1"
