--- a/client/package.json
+++ b/client/package.json
@@ -7,5 +7,9 @@
     "test": "mocha --recursive --exit"
   },
   "author": "Basar Turgut",
-  "license": "GPL-3.0"
+  "license": "GPL-3.0",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "cortex-axon-shared": "1.0.0"
+  }
 }
