--- a/service/package.json
+++ b/service/package.json
@@ -1,12 +1,12 @@
 {
   "name": "cortex-axon-service",
   "version": "1.0.0",
-  "description": "",
+  "description": "Service which responds to route queries",
   "main": "main/service.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive --exit",
+    "start": "node service.js --use_strict"
   },
-  "keywords": [],
   "author": "Basar Turgut",
   "license": "GPL-3.0",
   "dependencies": {
