--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cortex-axon-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Client to communicate with cortex-axon-service",
   "main": "client.js",
   "scripts": {
@@ -10,6 +10,6 @@
   "license": "GPL-3.0",
   "dependencies": {
     "axios": "^0.18.0",
-    "cortex-axon-shared": "1.0.0"
+    "cortex-axon-shared": "^1.0.1"
   }
 }
