--- a/client/package.json
+++ b/client/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "cortex-axon-client",
+  "name": "cortex-route-client",
   "version": "1.0.1",
   "description": "Client to communicate with cortex-axon-service",
-  "main": "client.js",
-  "scripts": {
-    "test": "mocha --recursive --exit"
-  },
+  "main": "main/client.js",
   "author": "Basar Turgut",
   "license": "GPL-3.0",
   "dependencies": {
     "axios": "^0.18.0",
-    "cortex-axon-shared": "^1.0.1"
+    "cortex-route-shared": "^1.0.1"
   }
 }
