--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "cortex-axon-parent",
-  "version": "1.0.0",
+  "name": "cortex-route-parent",
   "description": "Service to provide scalable STUN functionality and respond peer route queries",
-  "main": "service.js",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cortex-core/cortex-axon.git"
@@ -14,12 +13,7 @@
   },
   "homepage": "https://github.com/cortex-core/cortex-axon#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "express-validator": "^5.3.1",
-    "helmet": "^3.16.0",
     "lodash": "^4.17.11",
-    "mongodb": "^3.2.3",
     "node-stun": "git+https://github.com/cortex-core/stun.git#v1.0.0",
     "winston": "^3.2.1"
   },
@@ -29,7 +23,6 @@
     "chai-http": "^4.2.1",
     "lerna": "^3.13.2",
     "mocha": "^6.1.2",
-    "mongo-mock": "^3.4.0",
     "sinon": "^7.3.1"
   }
 }
