--- a/shared/package.json
+++ b/shared/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "cortex-axon-shared",
+  "name": "cortex-route-shared",
   "version": "1.0.1",
   "description": "Shared functionality for cortex-axon packages",
   "main": "main/index.js",
-  "scripts": {
-    "test": "mocha --recursive --exit"
-  },
   "author": "Basar Turgut",
   "license": "GPL-3.0"
 }
