--- a/client/package.json
+++ b/client/package.json
@@ -8,5 +8,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cortex-route-shared": "^1.0.2"
+  },
+  "devDependencies": {
+    "axios-mock-adapter": "^1.16.0"
   }
 }
