--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,7 @@
   "author": "Basar Turgut",
   "license": "GPL-3.0",
   "dependencies": {
-    "axios": "^0.18.0",
-    "cortex-route-shared": "^1.0.2"
+    "axios": "^0.18.0"
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.16.0"
